--- a/project1/index.html
+++ b/project1/index.html
@@ -116,7 +116,7 @@
     <div class="container3">
         <div class="gallery">
             <a href="/img/image-03.jpg" data-lightbox="models" data-title="caption1">
-                <img src="/img/image-03.jpg"  width="1000px">
+                <img src="/img/image-03.jpg">
             </a>
             <a href="/img/image-02.jpg" data-lightbox="models" data-title="caption2">
                 <img src="/img/image-02.jpg" alt="">
@@ -136,15 +136,12 @@
                 <img src="/img/image-06.jpg" alt="">
             </a>
             <a href="/img/image-04.jpg" data-lightbox="models" data-title="caption8">
-                <img src="/img/image-04.jpg" alt="">
+                <img src="/img/image-04.jpg"  alt="">
             </a>
             <a href="/img/image-05.jpg" data-lightbox="models" data-title="caption9">
                 <img src="/img/image-05.jpg" alt="">
             </a>
-            
-            
-
-        </div>
+            </div>
     </div>
 
     <script src="/js/lightbox-plus-jquery.js"></script>
