--- a/second1/index1.html
+++ b/second1/index1.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name"><span>john</span><br>Designation<br>Division.</h2>
+                        <h2 class="name"><span>jane</span><br>Designation<br>Division.</h2>
                         <p class="description">
                             Lorem ipsum dolor sit amet<br>
                             consectetur adipisicing elit.
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name"><span>Jane</span><br>Designation<br>Division.</h2>
+                        <h2 class="name"><span>jeremy</span><br>Designation<br>Division.</h2>
                         <p class="description">
                             Lorem ipsum dolor sit amet<br>
                             consectetur adipisicing elit.
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h2 class="name"><span>Jeremy</span><br>Designation<br>Division.</h2>
+                        <h2 class="name"><span>john</span><br>Designation<br>Division.</h2>
                         <p class="description">
                             Lorem ipsum dolor sit amet<br>
                             consectetur adipisicing elit.
@@ -146,6 +146,44 @@
 
     <script src="/secondjs/lightbox-plus-jquery.js"></script>
 
+    <div class="slideshow-container">
+        <div class="slide fade">
+            <img src="/img/image-03.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-02.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-01.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-03.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-04.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-05.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-06.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-04.jpg" style="width:100%">
+        </div>
+        <div class="slide fade">
+            <img src="/img/image-05.jpg" style="width:100%">
+        </div>
+    </div>
+    <button class="prev1" onclick="plusSlides(-1)">❮</button>
+    <button class="next1" onclick="plusSlides(1)">❯</button>
+
+
+    
+
+
+     
+<script src="/secondjs/java1.js"></script>
 
 
 
