--- a/second1/index1.html
+++ b/second1/index1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/second1/style1.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/second1/lightbox1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -160,6 +161,47 @@
     </div>
 
     <script src="/secondjs/lightbox-plus-jquery.js"></script>
+
+    <div class="slider2">
+        <div class="slider2-item active">
+            <img src="/img/image-03.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-02.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-01.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-03.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-04.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-05.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-06.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-04.jpg" alt=""></div>
+        <div class="slider2-item">
+            <img src="/img/image-05.jpg" alt="">
+        </div>
+        <div class="slider2-btns">
+            <button id="btn-prev">
+                <i class="fa-solid fa-angle-left"></i>
+            </button>
+            <button id="btn-next">
+                <i class="fa-solid fa-angle-right"></i>
+            </button>
+        </div>
+        <div class="dots">
+            
+        </div>
+    </div>
+
+
+    <script src="/secondjs/main.js"></script>
+
+    
+
+
+
 
    
 
